--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,17 @@
                 <h1 class="text-center">Welcome to the URL Shortener</h1>
             </div>
         </div>
+
+
+        <form th:action="@{/shorten}" method="post" class="mt-4" th:object="${createShortUrlForm}">
+            <div class="mb-3">
+                <label for="originalUrl" class="form-label">Long URL</label>
+                <input type="text" class="form-control" id="originalUrl" placeholder="https://example.com" th:field="*{originalURL}">
+                <div class="text-danger" th:if="${#fields.hasErrors('originalURL')}" th:errors="*{originalURL}"></div>
+            </div>
+            <button type="submit" class="btn btn-primary">Convert to Short</button>
+        </form>
+
         <div class="row mt-4">
             <div class="col">
                 <table class="table table-striped table-bordered">
