--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>URL Shortener</title>
@@ -24,17 +25,28 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Left-aligned list -->
+            <ul class="navbar-nav">
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link fw-bold text-white" th:href="@{/my-urls}">My URLs</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link fw-bold text-white" th:href="@{/admin/dashboard}">Admin Dashboard</a>
+                </li>
+            </ul>
+            <!-- Right-aligned list -->
             <ul class="navbar-nav ms-auto">
-                <a class="nav-link fw-bold text-white" th:href="@{/}">Home</a>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link fw-bold text-white" th:href="@{/login}">Login</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link fw-bold text-white" href="#">Features</a>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link fw-bold text-white" th:href="@{/register}">Register</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link fw-bold text-white" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link fw-bold text-white" href="#">Contact</a>
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <form th:action="@{/logout}" method="post">
+                        <button class="btn btn-link nav-link fw-bold text-white" type="submit">Logout</button>
+                    </form>
                 </li>
             </ul>
         </div>
