--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -30,7 +30,7 @@
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link fw-bold text-white" th:href="@{/my-urls}">My URLs</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                <li class="nav-item"  sec:authorize="hasAuthority('ADMIN')">
                     <a class="nav-link fw-bold text-white" th:href="@{/admin/dashboard}">Admin Dashboard</a>
                 </li>
             </ul>
@@ -42,7 +42,9 @@
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link fw-bold text-white" th:href="@{/register}">Register</a>
                 </li>
-
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <span class="nav-link fw-bold text-white">Logged in as: <span th:text="${#authentication.name}"></span></span>
+                </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" method="post">
                         <button class="btn btn-link nav-link fw-bold text-white" type="submit">Logout</button>
